--- a/style.css
+++ b/style.css
@@ -11,6 +11,13 @@
     z-index: -1;
 }
 
+.flexslider {
+    /* position: absolute !important; */
+    background-color: black;
+}
+
+
+
 /* #rooms-gallery-banners {
     background-color: white !important;
 }
@@ -30,7 +37,14 @@
     height: 100vh;
     text-align: center;
     position: relative;
-    overflow: auto;
+    /* overflow: auto; */
+}
+
+@media (max-width: 768px) {
+    #landing-logo {
+        height: 90vh;
+        
+    }
 }
 
 /* @media (min-height: 1024px) {
@@ -55,6 +69,7 @@
     background-image: url("landing-background.jpg");
     background-repeat: no-repeat;
     background-position: center center;
+    background-position-y: 44vh;
     background-size: cover;
     padding-left: 0px;
     position: fixed;
@@ -69,12 +84,15 @@
     #landing-bg {
         background-size: contain;
         overflow-y: hidden;
+        
     }
 }
 
 @media (max-width: 768px) {
     #landing-bg {
         min-height: 140vh;
+       
+
         
     }
 }
@@ -121,9 +139,5 @@
     /* height: 50px; */
 }
 
-#slider-container {
-    /* background-color: white; */
-    /* top: -10vh; */
-    /* z-index: -3; */
-}
+
 
