--- a/style.css
+++ b/style.css
@@ -1,20 +1,14 @@
-/* body {
-    background-color: white !important;
-} */
+
 .wrapper {
     background-color: white;
     z-index: -2;
 }
 
-.hero{ 
-    background-color: white;
-    z-index: -1;
+#hero-slider-top {
+    bottom: 0;
 }
 
-.flexslider {
-    /* position: absolute !important; */
-    background-color: black;
-}
+
 
 
 
@@ -34,9 +28,10 @@
 #landing-logo {
     top: 40vh;
     /* height: 95rem; */
-    height: 100vh;
+    height: 109vh;
     text-align: center;
     position: relative;
+    z-index: -1;
     /* overflow: auto; */
 }
 
@@ -71,7 +66,6 @@
     background-position: center center;
     background-position-y: 44vh;
     background-size: cover;
-    padding-left: 0px;
     position: fixed;
     top: -45vh;
     width: 100vw;
@@ -104,11 +98,10 @@
 #topnav {
     background-color: white;
     overflow: hidden;
-    /* position: absolute; */
+    position: relative;
     width: 100vw;
-    /* top: 60vh; */
-    display: flex;
-    justify-content: flex-start;
+    justify-content: space-evenly;
+    padding: 10px;
 }
 
 #topnav a {
@@ -116,7 +109,7 @@
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
-    font-size: 17px;
+    font-size: 10px;
 }
 
 #topnav a:hover {
