--- a/style.css
+++ b/style.css
@@ -8,6 +8,17 @@
     bottom: 0;
 }
 
+.newsletter-outer-wrapper {
+    z-index: -2;
+}
+
+/* @media (max-width: 768px) {
+    #hero-slider-top {
+        width: 100vw;
+        
+    }
+} */
+
 
 
 
@@ -41,24 +52,6 @@
         
     }
 }
-
-/* @media (min-height: 1024px) {
-    #landing-logo {
-        height: 95rem;
-    }
-}
-
-@media (min-height: 567px) {
-    #landing-logo {
-        height: 60rem;
-    }
-}
-
-@media (min-height: 730px) {
-    #landing-logo {
-        height: 75rem;
-    }
-} */
 
 #landing-bg {
     background-image: url("landing-background.jpg");
@@ -100,6 +93,7 @@
     overflow: hidden;
     position: relative;
     width: 100vw;
+    display: flex;
     justify-content: space-evenly;
     padding: 10px;
 }
@@ -133,4 +127,60 @@
 }
 
 
+.Navbar_Wrapper {
+    min-width: 100vw;
+    background-color: white;
+    z-index: 100;
+    /* box-shadow: 0px 0.7px 0px 0px rgba(0, 0, 0, 0.2); */
+}
 
+.Navbar {
+    /* background-color: #4CAF50; */
+    background-color: white;
+    display: flex;
+    padding: 16px;
+    font-family: sans-serif;
+    color: black;
+    /* min-width: 66.09vw; */
+    min-width: 100vw;
+    /* margin-left: 17vw; */
+    
+  }
+  .Navbar__Link {
+    padding-right: 8px;
+  }
+  .Navbar__Items {
+    display: flex;
+  }
+  .Navbar__Items--right {
+    margin-left:auto;
+  }
+  .Navbar__Link-toggle {
+    display: none;
+  }
+  @media only screen and (max-width: 768px) {
+    .Navbar {
+        background-color: #4CAF50;
+        min-width: 34rem;
+        margin-left: 1rem;
+    }
+    .Navbar__Items,
+    .Navbar {
+      flex-direction: column;
+    }
+  .Navbar__Items {
+      display:none;
+    }
+  .Navbar__Items--right {
+      margin-left:0;
+    }
+  .Navbar__ToggleShow {
+      display: flex;
+    }
+  .Navbar__Link-toggle {
+      align-self: flex-end;
+      display: initial;
+      position: absolute;
+      cursor: pointer;
+     } 
+  }
