--- a/style.css
+++ b/style.css
@@ -161,8 +161,8 @@
   @media only screen and (max-width: 768px) {
     .Navbar {
         background-color: #4CAF50;
-        min-width: 34rem;
-        margin-left: 1rem;
+        /* min-width: 34rem; */
+        /* margin-left: 1rem; */
     }
     .Navbar__Items,
     .Navbar {
