--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@
 #landing-logo {
     top: 40vh;
     /* height: 95rem; */
-    height: 109vh;
+    height: 105vh;
     text-align: center;
     position: relative;
     z-index: -1;
@@ -48,7 +48,7 @@
 
 @media (max-width: 768px) {
     #landing-logo {
-        height: 100vh;
+        height: 105vh;
         
     }
 }
@@ -64,7 +64,6 @@
     width: 100vw;
     height: 100vw;
     z-index: -2;
-    /* opacity: .75; */
 }
 
 @media (min-width: 1024px) {
@@ -77,7 +76,7 @@
 
 @media (max-width: 768px) {
     #landing-bg {
-        min-height: 140vh;
+        min-height: 145vh;
        
 
         
@@ -111,13 +110,25 @@
     
   }
 
-  #Navbar_Image {
+  .Navbar_Image {
   padding-top: 10px;   
   margin-bottom: 0px;
   padding-bottom: 0px; 
-  max-block-size: 3.5rem;
+  max-block-size: 4.6rem;
+  /* max-block-size: 3.5rem; */
   margin-left: 29.5rem;
+  /* -webkit-animation-name: example;
+  -webkit-animation-duration: 4s;  */
   }
+
+  .Navbar_Image_Fade {
+      max-block-size: 3.8rem;
+  }
+
+  /* @keyframes example {
+  from {max-block-size:4.6rem;}
+  to {max-block-size: 3.5rem;}
+} */
 
   .Navbar__Link {
     padding-right: 15px;
@@ -125,8 +136,10 @@
   .Navbar__Items {
     display: flex;
     margin-left: 28rem;
-
+    font-family: PT sans,sans-serif;
+    font-size: 1.5rem;
   }
+
   .Navbar__Items--right {
     margin-left:40vw;
   }
@@ -144,7 +157,7 @@
         /* min-width: 34rem; */
         /* margin-left: 1rem; */
     }
-    #Navbar_Image {
+    .Navbar_Image {
         padding-top: 10px;   
         margin-bottom: 0px;
         padding-bottom: 0px; 
