--- a/style.css
+++ b/style.css
@@ -101,7 +101,6 @@
     padding-top: .3rem;
     padding-bottom: 1rem;
     padding-left: 1.5rem; 
-
     font-family: sans-serif;
     color: black;
     /* min-width: 66.09vw; */
@@ -116,7 +115,7 @@
   padding-bottom: 0px; 
   max-block-size: 4.6rem;
   /* max-block-size: 3.5rem; */
-  margin-left: 29.5rem;
+  margin-left: 15.5rem;
   /* -webkit-animation-name: example;
   -webkit-animation-duration: 4s;  */
   }
@@ -135,17 +134,20 @@
   }
   .Navbar__Items {
     display: flex;
-    margin-left: 28rem;
+    margin-left: 14rem;
     font-family: PT sans,sans-serif;
     font-size: 1.5rem;
   }
 
   .Navbar__Items--right {
-    margin-left:40vw;
+    margin-left:35vw;
   }
   .Navbar__Link-toggle {
     display: none;
   }
+
+  
+
   @media only screen and (max-width: 768px) {
     .Navbar_Wrapper {
         padding-bottom: 1.5rem;
@@ -185,4 +187,13 @@
       cursor: pointer;
       box-shadow: 0px 0.7px 0px 0px rgba(0, 0, 0, 0.2);
      } 
+  }
+
+  @media only screen and (min-width: 1600px) {
+    .Navbar_Image {
+        margin-left: 29.5rem;
+        }
+        .Navbar__Items {
+            margin-left: 28rem;
+        }
   }
