--- a/style.css
+++ b/style.css
@@ -67,16 +67,21 @@
     transform: translate3d(10px, 20px, 0);
 }
 
+.Navbar_Outer {
+    
+}
+
 .Navbar_Wrapper {
+    background-color: blueviolet;
     min-width: 100vw;
-    background-color: white;
+    /* background-color: white; */
     /* z-index: 1; */
     /* box-shadow: 0px 0.7px 0px 0px rgba(0, 0, 0, 0.2); */
 }
 
 .Navbar {
-    /* background-color: #4CAF50; */
-    background-color: white;
+    background-color: #4CAF50;
+    /* background-color: white; */
     display: flex;
     padding-top: .3rem;
     padding-bottom: 1rem;
